Prevent from getting squished

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -130,7 +130,7 @@
   }
 
   &--search-advanced {
-    flex: 1;
+    flex: 1 0 auto;
     text-transform: lowercase;
     margin: 0 5px;
   }
