--- a/resources/assets/less/bem/search-advanced-forum-post.less
+++ b/resources/assets/less/bem/search-advanced-forum-post.less
@@ -51,8 +51,11 @@
 
     &--buttons {
       display: flex;
-      padding-left: 40px;
-      padding-right: 40px;
+
+      @media @desktop {
+        padding-left: 40px;
+        padding-right: 40px;
+      }
     }
   }
 
